Replace org.apache.commons.io.FileUtils with java.nio.file.Files